# Advent-of-Code

./: ..gitignore.un~  .cruft.json  .gitignore  .gitignore~  README.md  SECURITY.md  pyproject.toml
2020/: aoc_2020_day1.py  aoc_2020_day2.py  aoc_2020_day3.py  aoc_2020_day4.py  aoc_2020_day5.py  aoc_2020_day6.py  aoc_2020_day7.py
2023/: dag_1.py  day_2.py  day_6.py  day_7.py
2024/: day1.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  day_2.py
2025/: day1.py  day2.py  day3.py  day4.py  day5.py
everybodycodes/2024_kingdom_of_algorithmia/: day_1.py
everybodycodes/2025_the_song_of_ducks_and_dragons/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py
